# ai-coding

./: .gitignore  CLAUDE.md
.chats/: w1.md  w2.md  w3.md  w4.md  w5.md
.claude/agents/: python-system-architect.md
.claude/commands/: code-review.md
.cursor/rules/: style.md
.specify/memory/: constitution.md
specs/001-db-query/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-mysql-support/: tasks.md
specs/w1/: 0001-spec.md  0002-implementation-plan.md  0003-soft-use.md
specs/w4/: codex-apply-patch.md
specs/w5/: 0001-pg-mcp-prd.md  0002-pg-mcp-design.md  0004-pg-mcp-impl-plan.md  0005-pg-mcp-impl-plan-review.md  0006-pg-mcp-code-review.md  0007-pg-mcp-test-plan.md  0008-pg-mcp-test-plan-review.md  (+3 more)
w2/db_query/backend/: .env.example  .gitignore  pyproject.toml
w2/db_query/backend/src/: main.py
w2/db_query/backend/src/adapters/: __init__.py  base.py  postgresql.py
w2/db_query/backend/src/api/: routes.py
w2/db_query/backend/src/db/: __init__.py  store.py
w2/db_query/backend/src/models/: __init__.py  schemas.py
w2/db_query/backend/src/services/: database.py  exporter.py  llm.py  metadata.py  sql_validator.py
w5/pg-mcp/: config.yaml.example  pyproject.toml
w5/pg-mcp/src/pg_mcp/: config.py  db_executor.py  models.py  nl2sql.py  result_validator.py  schema_cache.py  server.py  sql_validator.py
w5/pg-mcp/tests/: conftest.py  test_config.py  test_db_executor.py  test_integration.py  test_models.py  test_nl2sql.py  test_result_validator.py  test_schema_cache.py  test_server.py  test_smoke.py  test_sql_validator.py
(+65 files in other folders)
