[project]
name = "pg-mcp"
version = "0.1.0"
description = "PostgreSQL MCP Server — Natural language to SQL"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.8.0",
    "asyncpg>=0.29",
    "openai>=1.30.0",
    "sqlglot>=23.0",
    "pydantic>=2.0",
    "pydantic-settings[yaml]>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
pg-mcp = "pg_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/pg_mcp"]
