[uv]
version = 1
requires-python = ">=3.11"

[project]
name = "db-query-backend"
version = "0.1.0"
description = "Database Query Tool Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "sqlglot>=23.0.0",
    "anthropic>=0.18.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "mypy>=1.8.0",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
